@@ -97,70 +97,3 @@ int kdbus_translate_attach_flags(uint64_t mask, uint64_t *kdbus_mask) {
         *kdbus_mask = m;
         return 0;
 }
-
-int bus_kernel_create_bus(const char *name, bool world, char **s) {
-        struct kdbus_cmd_make *make;
-        struct kdbus_item *n;
-        int fd;
-
-        assert(name);
-        assert(s);
-
-        fd = open("/dev/kdbus/control", O_RDWR|O_NOCTTY|O_CLOEXEC);
-        if (fd < 0)
-                return -errno;
-
-        make = alloca0(ALIGN8(offsetof(struct kdbus_cmd_make, items) +
-                              offsetof(struct kdbus_item, data64) + sizeof(uint64_t) +
-                              offsetof(struct kdbus_item, str) +
-                              DECIMAL_STR_MAX(uid_t) + 1 + strlen(name) + 1));
-
-        make->size = offsetof(struct kdbus_cmd_make, items);
-
-        n = make->items;
-        n->size = offsetof(struct kdbus_item, bloom_parameter) +
-                  sizeof(struct kdbus_bloom_parameter);
-        n->type = KDBUS_ITEM_BLOOM_PARAMETER;
-
-        n->bloom_parameter.size = DEFAULT_BLOOM_SIZE;
-        n->bloom_parameter.n_hash = DEFAULT_BLOOM_N_HASH;
-
-        assert_cc(DEFAULT_BLOOM_SIZE > 0);
-        assert_cc(DEFAULT_BLOOM_N_HASH > 0);
-
-        make->size += ALIGN8(n->size);
-
-        n = KDBUS_ITEM_NEXT(n);
-        sprintf(n->str, UID_FMT "-%s", getuid(), name);
-        n->size = offsetof(struct kdbus_item, str) + strlen(n->str) + 1;
-        n->type = KDBUS_ITEM_MAKE_NAME;
-        make->size += ALIGN8(n->size);
-
-        make->flags = world ? KDBUS_MAKE_ACCESS_WORLD : 0;
-
-        if (ioctl(fd, KDBUS_CMD_BUS_MAKE, make) < 0) {
-                safe_close(fd);
-                return -errno;
-        }
-
-        /* The higher 32bit of the flags field are considered
-         * 'incompatible flags'. Refuse them all for now. */
-        if (make->flags > 0xFFFFFFFFULL) {
-                safe_close(fd);
-                return -ENOTSUP;
-        }
-
-        if (s) {
-                char *p;
-
-                p = strjoin("/dev/kdbus/", n->str, "/bus", NULL);
-                if (!p) {
-                        safe_close(fd);
-                        return -ENOMEM;
-                }
-
-                *s = p;
-        }
-
-        return fd;
-}
