@@ -58,8 +58,6 @@ struct memfd_cache {
         size_t allocated;
 };
 
-int bus_kernel_create_bus(const char *name, bool world, char **s);
-
 void bus_kernel_flush_memfd(sd_bus *bus);
 
 int kdbus_translate_attach_flags(uint64_t sd_bus_flags, uint64_t *kdbus_flags);
